[package]
name = "lw-photo-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
eframe = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image"] }
spng = "0.1.0"
turbojpeg = {version = "0.5", features = ["image"]}
qoi = "0.4.1"

[dev-dependencies]
