[package]
name = "lw-photo-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
eframe = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image"] }
spng = "0.1.0"
turbojpeg = {version = "0.5", features = ["image"]}
qoi = "0.4.1"
rayon = "1.5.3"
kamadak-exif = "0.5.5"
notify-rust = "4"
winapi = { version = "0.3", features = [ "winbase", "objidlbase", "wingdi", "debugapi" ] }

[dependencies.windows]
version = "0.43.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
]